<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/category_profiles"
        android:key="category_profiles">

        <Preference
            android:key="server_profile_list"
            android:fragment="xtuaok.sharegyazo.ProfileListFragment"
            android:title="@string/server_profiles">
        </Preference>
        <ListPreference
            android:dialogTitle="@string/default_profile"
            android:key="default_profile"
            android:summary="%s"
            android:title="@string/default_profile" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_behavior_url"
        android:key="cateogry_gyazo_url">
        <SwitchPreference
            android:title="@string/copy_gyazo_url_title"
            android:summary="@string/copy_gyazo_url_summary"
            android:key="copy_gyazo_url"
            android:defaultValue="true" />
        <SwitchPreference
            android:title="@string/open_url"
            android:summary="@string/open_url_browser_summary"
            android:key="open_url_browser"
            android:defaultValue="false" />
        <SwitchPreference
            android:title="@string/share_url"
            android:summary="@string/share_url_text_summary"
            android:key="share_url_text"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications"
        android:key="category_notification">
        <SwitchPreference
            android:title="@string/pref_show_notification_title"
            android:summary="@string/pref_show_notification_summary"
            android:defaultValue="true"
            android:key="show_notification"/>
        <SwitchPreference
            android:title="@string/pref_auto_close_notification_title"
            android:summary="@string/pref_auto_close_notification_summary"
            android:key="auto_close_notification"
            android:defaultValue="false"
            android:dependency="show_notification" />
        <ListPreference
             android:dialogTitle="@string/notification_action"
             android:key="notification_action"
             android:title="@string/notification_action"
             android:entries="@array/notify_action_entries"
             android:entryValues="@array/notify_action_values"
             android:defaultValue="1"
             android:summary="%s"
             android:dependency="show_notification" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About">
        <Preference
            android:selectable="true"
            android:enabled="true"
            android:key="opensource_license"
            android:title="@string/opensource_license"
            />
        <Preference
            android:selectable="true"
            android:enabled="true"
            android:key="about"
            android:title="@string/app_name"
            android:summary="@string/share_app_summary">
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>