<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="Gyazo CGI" android:key="category_gyazo_cgi">
        <EditTextPreference
            android:positiveButtonText="@string/ok"
            android:negativeButtonText="@string/cancel"
            android:dialogMessage="@string/message_gyazo_uploader"
            android:dialogTitle="@string/dialog_gyazo_uploader"
            android:key="gyazo_cgi_url"
            android:title="Gyazo URL"
            android:defaultValue="http://gyazo.com/upload.cgi"/>
        <EditTextPreference
            android:positiveButtonText="@string/ok"
            android:negativeButtonText="@string/cancel"
            android:dialogMessage="@string/message_gyazo_id"
            android:dialogTitle="@string/dialog_gyazo_id"
            android:key="gyazo_cgi_id"
            android:title="Gyazo ID" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/image_format" android:key="category_image_format">
        <ListPreference
            android:dialogTitle="@string/image_file_format"
            android:key="image_file_format"
            android:title="@string/image_file_format"
            android:entries="@array/image_format_entries"
            android:entryValues="@array/image_format_values"
            android:summary="%s"
            android:defaultValue="0" />
        <EditTextPreference android:positiveButtonText="@string/ok"
            android:negativeButtonText="@string/cancel"
            android:dialogMessage="@string/image_quality_value"
            android:dialogTitle="@string/image_quality_value"
            android:key="image_quality"
            android:inputType="numberDecimal"
            android:defaultValue="100"
            android:title="@string/image_quality" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_behavior_url"
        android:key="cateogry_gyazo_url">
        <SwitchPreference
            android:title="@string/copy_gyazo_url_title"
            android:summary="@string/copy_gyazo_url_summary"
            android:key="copy_gyazo_url"
            android:defaultValue="true" />
        <SwitchPreference
            android:title="@string/open_url"
            android:summary="@string/open_url_browser_summary"
            android:key="open_url_browser"
            android:defaultValue="false" />
        <SwitchPreference
            android:title="@string/share_url"
            android:summary="@string/share_url_text_summary"
            android:key="share_url_text"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notifications"
        android:key="category_notification">
        <SwitchPreference
            android:title="@string/pref_show_notification_title"
            android:summary="@string/pref_show_notification_summary"
            android:defaultValue="true"
            android:key="show_notification"/>
        <SwitchPreference
            android:title="@string/pref_auto_close_notification_title"
            android:summary="@string/pref_auto_close_notification_summary"
            android:key="auto_close_notification"
            android:defaultValue="false"
            android:dependency="show_notification" />
        <ListPreference
             android:dialogTitle="@string/notification_action"
             android:key="notification_action"
             android:title="@string/notification_action"
             android:entries="@array/notify_action_entries"
             android:entryValues="@array/notify_action_values"
             android:defaultValue="1"
            android:summary="%s"
             android:dependency="show_notification" />
    </PreferenceCategory>
    <PreferenceCategory android:title="About">
        <Preference
            android:selectable="true"
            android:enabled="true"
            android:key="opensource_license"
            android:title="@string/opensource_license"
            />
        <Preference
            android:selectable="true"
            android:enabled="true"
            android:key="about"
            android:title="@string/app_name"
            android:summary="@string/share_app_summary">
            <intent android:action="android.intent.action.SEND"
                android:mimeType="text/plain">
                <extra
                    android:name="android.intent.extra.TEXT"
                    android:value="@string/share_app_text" />
            </intent>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>